--- a/res/layout/system_title_planet.xml
+++ b/res/layout/system_title_planet.xml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:id="@+id/title_root"
     android:layout_width="fill_parent"
-    android:layout_height="60dip">
+    android:layout_height="fill_parent">
 
     <ImageButton
         android:background="@null"
@@ -13,8 +13,8 @@
         android:layout_marginRight="10dip"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_width="48px"
-        android:layout_height="48px" android:scaleType="fitCenter"/>
+        android:layout_width="48dip"
+        android:layout_height="48dip" android:scaleType="fitCenter"/>
 
     <ImageButton
         android:background="@null"
