--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<style name="MyTheme" parent="android:Theme">
-		<item name="android:windowTitleSize">50px</item>    
+		<item name="android:windowTitleSize">50dip</item>    
 		<!--  <item name="android:windowBackground">@drawable/background</item> -->
 	</style>
 	
