--- a/trunk/res/values/themes.xml
+++ b/trunk/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<style name="MyTheme" parent="android:Theme">
+	<style name="InfoTitleTheme" parent="android:Theme">
 		<item name="android:windowTitleSize">50dip</item>    
 		<!--  <item name="android:windowBackground">@drawable/background</item> -->
 	</style>
