--- a/trunk/res/layout/adapter_galaxy_parent.xml
+++ b/trunk/res/layout/adapter_galaxy_parent.xml
@@ -3,6 +3,8 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
-    <TextView android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:id="@+id/txt_name" android:text="Name" android:layout_width="fill_parent"></TextView>
+    <TextView android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:id="@+id/txt_name" android:text="Name" android:layout_width="wrap_content"></TextView>
     <TextView android:layout_width="wrap_content" android:layout_below="@+id/txt_name" android:layout_height="wrap_content" android:layout_alignLeft="@+id/txt_name" android:id="@+id/txt_player" android:text="Player"></TextView>
+    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:id="@+id/img_debris" android:src="@drawable/debris" android:layout_centerVertical="true"></ImageView>
+    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/img_debris" android:layout_alignTop="@+id/img_debris" android:id="@+id/img_moon" android:src="@drawable/moon" android:layout_centerVertical="true"></ImageView>
 </RelativeLayout>
