--- a/res/layout/system_noification.xml
+++ b/res/layout/system_noification.xml
@@ -4,10 +4,10 @@
   android:layout_width="fill_parent"
   android:layout_height="wrap_content">
 <ImageView android:layout_width="wrap_content" android:layout_alignParentLeft="true" android:src="@drawable/warning_off" android:layout_alignParentTop="true" android:id="@+id/img_warning" android:layout_height="wrap_content"/>
-<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView01" android:text="OGame Fleet" android:layout_alignTop="@id/img_warning" android:layout_toRightOf="@+id/img_warning" android:textStyle="bold"/>
+<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/TextView01" android:text="OGame Fleet" android:layout_alignTop="@id/img_warning" android:layout_toRightOf="@+id/img_warning" android:textStyle="bold" android:textColor="?android:attr/textColorPrimaryInverse"/>
 
-<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="H F N" android:id="@+id/txt_info" android:layout_below="@id/TextView01" android:layout_toRightOf="@+id/img_warning" android:textSize="12dp"/>
+<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="H F N" android:id="@+id/txt_info" android:layout_below="@id/TextView01" android:layout_toRightOf="@+id/img_warning" android:textSize="12dp" android:textColor="?android:attr/textColorPrimaryInverse"/>
 
 
-<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/txt_info" android:layout_alignLeft="@+id/txt_info" android:text="Event Text" android:textSize="12dp" android:id="@+id/txt_event_text"></TextView>
+<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/txt_info" android:layout_alignLeft="@+id/txt_info" android:text="Event Text" android:textSize="12dp" android:id="@+id/txt_event_text" android:textColor="?android:attr/textColorPrimaryInverse"></TextView>
 </RelativeLayout>
