--- a/trunk/res/values/arrays.xml
+++ b/trunk/res/values/arrays.xml
@@ -88,5 +88,16 @@
         <item>Wie auf Homepage</item>
         <item>A-Z</item>
     </string-array>
-
+    
+    <string-array name="galaxies">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+    </string-array>
 </resources>
