--- a/res/layout/activity_overview.xml
+++ b/res/layout/activity_overview.xml
@@ -24,16 +24,16 @@
 	<TextView android:id="@+id/txt_building"
 		android:layout_toRightOf="@+id/img_building" android:layout_width="wrap_content"
 		android:text="TextView" android:layout_height="wrap_content"
-		android:layout_alignTop="@+id/img_building" android:layout_alignBottom="@+id/img_building" android:gravity="center_vertical" android:visibility="invisible"/>
+		android:layout_alignTop="@+id/img_building" android:layout_alignBottom="@+id/img_building" android:gravity="center_vertical" android:visibility="invisible" android:layout_marginLeft="5dip"/>
 		
 	<TextView android:id="@+id/txt_research"
 		android:layout_toRightOf="@+id/img_reseach" android:layout_width="wrap_content"
 		android:text="TextView" android:layout_height="wrap_content"
-		android:layout_alignTop="@+id/img_reseach" android:layout_alignBottom="@+id/img_reseach" android:gravity="center_vertical" android:visibility="invisible"/>
+		android:layout_alignTop="@+id/img_reseach" android:layout_alignBottom="@+id/img_reseach" android:gravity="center_vertical" android:visibility="invisible" android:layout_marginLeft="5dip"/>
 		
 	<TextView android:id="@+id/txt_ships"
 		android:layout_toRightOf="@+id/img_ships" android:layout_width="wrap_content"
 		android:text="TextView" android:layout_height="wrap_content"
-		android:layout_alignTop="@+id/img_ships" android:layout_alignBottom="@+id/img_ships" android:gravity="center_vertical" android:visibility="invisible"/>
+		android:layout_alignTop="@+id/img_ships" android:layout_alignBottom="@+id/img_ships" android:gravity="center_vertical" android:visibility="invisible" android:layout_marginLeft="5dip"/>
 
 </RelativeLayout>  
