removed fleet1 as tab and enabled new mission button in fleetview fixed crash when selecting last planet on account with moon hiding old countdown-elements on load

--- a/res/layout/activity_tab_movement.xml
+++ b/res/layout/activity_tab_movement.xml
@@ -17,7 +17,7 @@
 	android:layout_alignParentBottom="true"
 	android:layout_width="fill_parent"
 	android:layout_alignParentLeft="true"
-	android:text="@string/new_mission" android:enabled="false"/>
+	android:text="@string/new_mission" android:enabled="true" android:onClick="onNewMissionClick"/>
   
   <Button android:id="@+id/btn_back"
 	android:layout_height="wrap_content"
