--- a/res/layout/activity_message_detail.xml
+++ b/res/layout/activity_message_detail.xml
@@ -28,7 +28,7 @@
 		android:layout_width="wrap_content" 
 	    android:layout_height="wrap_content" 
 	    android:id="@+id/btn_repley"
-	    android:layout_weight="1" android:text="@string/message_respond" android:enabled="false"/>
+	    android:layout_weight="1" android:text="@string/message_respond" android:enabled="false" android:onClick="btnRepley"/>
 	
 	 <Button
 	 	android:id="@+id/btn_delete"
