--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -130,5 +130,6 @@
         <item>13</item>
         <item>14</item>
         <item>15</item>
+        <item>16</item>
     </string-array>
 </resources>
