--- a/trunk/res/menu/menu_main.xml
+++ b/trunk/res/menu/menu_main.xml
@@ -29,5 +29,5 @@
     <item android:id="@+id/resourceSettings"
           android:icon="@android:drawable/ic_menu_manage"
           android:title="@string/menu_resources"
-          android:enabled="false" />
+          android:enabled="true" />
 </menu>
