--- a/res/layout/activity_tab_fleet3.xml
+++ b/res/layout/activity_tab_fleet3.xml
@@ -153,7 +153,7 @@
 	android:layout_width="wrap_content"
 	android:layout_alignParentLeft="true"
 	android:text="@string/fleet2_back"
-	android:enabled="false"/>
+	android:onClick="goBack"/>
 	
   <Button android:id="@+id/fleet3_send"
 	android:layout_height="wrap_content"
