--- a/res/menu/menu_login.xml
+++ b/res/menu/menu_login.xml
@@ -20,4 +20,7 @@
     <item android:id="@+id/settings"
           android:icon="@android:drawable/ic_menu_preferences"
           android:title="@string/menu_settings" />
+	<!-- <item android:id="@+id/about"
+          android:icon="@android:drawable/ic_menu_help"
+          android:title="@string/menu_about" />-->
 </menu>
