Added view for alliance (Can be called with ogame://alliance/?allyid=??) Added AllyID to Galaxy Classes moved moon regex from strings to its own file

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -58,7 +58,7 @@
 		<item>http://www.ogame.com.pt</item>
 		<item>http://www.ogame.ro</item>
 		<item>http://www.ogame.ru</item>
-		<item>"http://www.ogame.rs</item>
+		<item>http://www.ogame.rs</item>
 		<item>http://www.ogame.sk</item>
 		<item>http://www.ogame.si</item>
 		<item>http://www.ogame.com.es</item>
