--- a/trunk/res/values/arrays.xml
+++ b/trunk/res/values/arrays.xml
@@ -58,7 +58,7 @@
 		<item>http://www.ogame.com.pt</item>
 		<item>http://www.ogame.ro</item>
 		<item>http://www.ogame.ru</item>
-		<item>"http://www.ogame.rs</item>
+		<item>http://www.ogame.rs</item>
 		<item>http://www.ogame.sk</item>
 		<item>http://www.ogame.si</item>
 		<item>http://www.ogame.com.es</item>
